--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -48,8 +48,27 @@
                 <h2>Download App</h2>
 
                 <p>Save $3 with App New User Only</p>
+
+                <div class="app__pic">
+                    <div class="app__qr">
+                        <img src="../../../assets/images/qr.jpg" alt="" width="30px">
+                    </div>
+
+                    <div class="app__logo">
+                        <div>
+                            <img src="../../../assets/images/pngwing.com (1).jpg" alt="" width="30px">
+                        </div>
+                        <div>
+                            <img src="../../../assets/images/ios.jpg" alt="" width="30px">
+                        </div>
+                    </div>
+                </div>
+
                 <ul>
-                    <li><a href=""></a></li>
+                    <li><a href=""><i class='bx bxl-facebook'></i></a></li>
+                    <li><a href=""><i class='bx bxl-twitter' ></i></a></li>
+                    <li><a href=""><i class='bx bxl-instagram' ></i></a></li>
+                    <li><a href=""><i class='bx bxl-linkedin' ></i></a></li>
                 </ul>
 
             </div>
