--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,53 @@
 <app-navbar></app-navbar>
 
 
+<!-- featured -->
+
+<div class="featured">
+  <div class="container__featured">
+
+    <ul>
+      <li>
+        <a href="" class="featured__fashion">
+          <p>Woman's Fashion </p>
+          <span class="material-symbols-outlined" style="font-size: 14px; font-weight: 900;">
+          arrow_forward_ios
+          </span></a>
+        
+      </li>
+      <li>
+        <a href="" class="featured__fashion">
+          <p>Men's Fashion</p>
+          <span class="material-symbols-outlined" style="font-size: 14px; font-weight: 900;">
+            arrow_forward_ios
+            </span>
+        </a>
+
+      <li><a href="">Electronics</a></li>
+      <li><a href="">Home & Lifestyle</a></li>
+      <li><a href="">Medicine</a></li>
+      <li><a href="">Sports & Outdoor</a></li>
+      <li><a href="">Baby's & Toys</a></li>
+      <li><a href="">Groceries & Pets</a></li>
+      <li><a href="">Health & Beauty</a></li>
+
+    </ul>
+
+    <div class="featured__image">
+      <div class="featured__image__container">
+        <h6>Iphone 14 Series</h6>
+        <h1>Up to 10% off Voucher</h1>
+  
+          <a href="">Shop Now         <span class="material-symbols-outlined">
+            arrow_forward
+            </span> </a>
+  
+      </div>
+    </div>
+
+  </div>
+</div>
+
 
 
 
