[Done] feature component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,12 +48,29 @@
 
     <div class="featured__image">
       <div class="featured__image__container">
-        <h6>Iphone 14 Series</h6>
-        <h1>Up to 10% off Voucher</h1>
-  
-          <a href="">Shop Now         <span class="material-symbols-outlined">
-            arrow_forward
-            </span> </a>
+
+        <div class="featured__description">
+
+          <div class="featured__logo">
+            <img src="../assets/images/pngwing.com.png" alt="" width="60px">
+            <p>Iphone 13 Series</p>
+          </div>
+            <h1>Up to 10% off Voucher</h1>
+
+            <div class="featured__shop">
+              <a href="">Shop Now</a>
+              <span class="material-symbols-outlined" style="font-size: 1.5rem;">
+                arrow_forward
+                </span> 
+            </div>
+    
+
+        </div>
+
+
+        <div class="featureimage">
+          <img src="../assets/images/pngimg.com - iphone_14_PNG48.png" alt="" >
+        </div>
   
       </div>
     </div>
