--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -78,8 +78,49 @@
 
 .featured__image__container {
     width: 100%;
+    height: 55vh;
     background-color: #000;
     color: white;
     padding: 1rem;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
 }
+
+.featured__logo {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.featured__description {
+    width: 100%;
+    padding-left: 2rem;
+}
+
+.featured__description h1 {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
+.featured__shop {
+    position: relative;
+    margin-top: 2rem;
+}
+
+.featured__shop a {
+    color: white;
+    font-size: 1.5rem;
+    padding: 1rem 0;
+    padding-right: 1rem;
+}
+
+.featured__shop span {
+    position: absolute;
+}
+
+.featureimage img {
+    width: fit-content;
+    max-width: 120% ;
+}
+
 
